--- a/styles/main-content.css
+++ b/styles/main-content.css
@@ -368,3 +368,29 @@
     padding: 20px 40px;
   }
   /* FIM CARD ARTISTA */
+
+@media (max-width: 768px) {
+  .sidebar {
+    display: none; /* Esconde a barra lateral */
+  }
+
+  .main-content {
+    width: 100%;
+    padding: 20px;
+  }
+
+  .header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  .music-cards {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .music-card {
+    width: 90%;
+  }
+}
